appId: org.gitnotes.app
name: Android - Todo CRUD Flow
tags:
  - full
  - android
  - todos
  - todo-crud
---

- launchApp

- runFlow:
    file: ../smoke/onboarding.yaml

- waitForAnimationToEnd

- tapOn:
    id: "tab-bar.tab.press-TodosTab"

- tapOn:
    id: "todo-list.icon-button.add"

- waitForAnimationToEnd:
    timeout: 1000

- runFlow:
    when:
      visible:
        text: ".*Add a repository.*|.*Repository Required.*"
    commands:
      - assertVisible:
          text: ".*Add a repository.*"
      - stopApp
