appId: org.gitnotes.app
name: Android - Note CRUD Flow
tags:
  - full
  - android
  - notes
  - note-crud
---

- launchApp

- runFlow:
    file: ../smoke/onboarding.yaml

- waitForAnimationToEnd

- tapOn:
    id: "tab-bar.tab.press-HomeTab"

- tapOn:
    id: "home.button.create-note"

- waitForAnimationToEnd:
    timeout: 1000

- runFlow:
    when:
      visible:
        text: ".*Add a repository.*|.*Repository Required.*"
    commands:
      - assertVisible:
          text: ".*Add a repository.*"
      - stopApp
