appId: com.xaventra.gitnotes
name: iOS Smoke - Home Screen Actions
tags:
  - smoke
  - ios
---

- launchApp:
    clearState: false

- tapOn:
    id: tab-bar.tab.press-HomeTab

- assertVisible:
    id: home.button.create-note

- assertVisible:
    id: home.button.open-journal

- assertVisible:
    id: home.button.open-templates

- assertVisible:
    id: home.button.navigate
